--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 
 		<!-- Modal as popup that user have copied the json-->
 		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
 
-		      <div class="modal-body text-center">
-		        JSON copied
-		      </div>
+					<div class="modal-body text-center">
+						JSON copied
+					</div>
 
-		    </div>
-		  </div>
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -132,6 +132,41 @@
 			  }
 			})();
 
+		let validate = function (){
+			console.log();
+			let result = true;
+			let txt = this.find('[name=parameterValue]').val();
+			let regex;
+			switch(this.find('[name=parameterValueType]').val()){
+				case "Bool":
+				  regex = /^[1|0]$/;
+					result = regex.test(txt);
+				break;
+				case "String":
+				  regex = /^[a-zA-Z]+[a-zA-Z0-9_]*$/;
+					result = regex.test(txt);
+				break;
+				case "Int":
+				  regex = /^[\d]+$/;
+					result = regex.test(txt);
+				break;
+				case "Float":
+				  regex = /^[0-9]*(?:\.[0-9]*)?$/;
+					result = regex.test(txt);
+				break;
+				default:
+				  regex = /^.*$/;
+					result = regex.test(txt);
+				break;
+			}
+			if(!result){
+				this.find('[name=parameterValue]').addClass('is-invalid');
+			}
+			else{
+			  this.find('[name=parameterValue]').removeClass('is-invalid');	
+			}
+		}
+
 		// 
 		$( document ).ready(function() {
 			console.log( "ready!" );
@@ -144,7 +179,12 @@
 				console.log( "added a parameter field!" );
 
 				// add the new row and set it up
-				var newParam = $("[id=template-parameter]").clone(true).appendTo('#parameterList').removeClass('d-none').attr('id', '');
+				var newParam = $("[id=template-parameter]").clone(true).appendTo('#parameterList').removeClass('d-none').attr('id', '');				
+
+				// add validation
+				newParam.find('[name=parameterValue]').on('input',validate.bind(newParam));
+				newParam.find('[name=parameterValueType]').change(validate.bind(newParam));
+
 
 				// functional delete button for row
 				newParam.children('[name=delete]').click(function(event) {
@@ -208,7 +248,10 @@
 				
 				jsonText = jsonString;
 				fileName = testName.value != "" ? testName.value : "test";
+				
 				// perform validation
+
+
 			});
 
 			// save json to file
@@ -242,7 +285,7 @@
 					$(exampleModal).modal('toggle')
 				}, 2000);
 				// alert("Copied:\n" + showArea.value);
-   	  });
+			});
 
 		});
 	</script>
